test/classes/ferguson/recursive/issue-12612.good
issue-12612.chpl:7: error: this recursive type construction is not yet handled
Note: This source location is a guess.
